# arceos

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-proxy-manager.sh  output_rv.md  package-lock.json  run-eval.sh
api/arceos_posix_api/: Cargo.toml
api/arceos_posix_api/src/: lib.rs  uspace.rs
api/arceos_posix_api/src/imp/: fd_ops.rs  fs.rs  io.rs  mod.rs  net.rs  pipe.rs  resources.rs  system.rs  task.rs  time.rs
api/arceos_posix_api/src/imp/io_mpx/: epoll.rs  mod.rs  poll.rs  select.rs
api/arceos_posix_api/src/imp/pthread/: mod.rs  mutex.rs
doc/: README.md  platform_raspi4.md
doc/logs/: 2026-04-25_linux_fs_migration_and_compatibility_log.md  2026-04-26-busybox-filesystem.md  2026-04-26-iozone-unixbench-fs-io.md  2026-04-27-unixbench-pipe-buffer.md  2026-04-27-uspace-regression-spec.md  2026-04-28-uspace-regression-followup.md  process.md
doc/toturials/: 00-overview.md  01-linux-fs-wrapper.md  02-user-process-and-syscall.md  03-fd-table-and-open-file-description.md  04-path-stat-mount.md  05-io-vector-and-posix-io.md  06-compat-shm.md  07-compat-itimer.md  08-signal-and-wait.md  09-execve-and-envp.md  GUIDELINES.md  README.md
docs/: ltp-fd-socket-compat-progress.md  network-loopback-lifecycle-compat.md  udp-loopback-blocking-recv.md
docs/development/: README.md
docs/development/interfaces/: README.md  filesystem.md  ipc-sync.md  memory.md  network.md  process-scheduler.md  syscall-inventory.md  time-system-runtime.md
docs/development/policies/: compatibility.md  errno.md
docs/superpowers/plans/: 2026-04-25-basic-filesystem-fd-implementation.md  2026-04-25-linux-fs-wrapper-implementation.md  2026-04-26-arceos-busybox-filesystem-implementation-plan.md  2026-04-26-iozone-unixbench-fs-io-plan.md  2026-04-27-uspace-regression-recovery-plan.md  2026-04-28-iperf-exit-hang.md
docs/superpowers/specs/: 2026-04-25-basic-filesystem-fd-design.md  2026-04-25-linux-fs-wrapper-design.md  2026-04-25-syscall-interface-atlas-design.md  2026-04-26-arceos-busybox-filesystem-design.md
examples/shell/: Cargo.toml
examples/shell/src/: cmd.rs  main.rs  uspace.rs
examples/shell/src/linux_fs/: fd.rs  mod.rs  mount.rs  path.rs  stat.rs  types.rs
examples/shell/src/uspace/: credentials.rs  fd_pipe.rs  fd_socket.rs  fd_table.rs  futex.rs  linux_abi.rs  memory_map.rs  memory_policy.rs  metadata.rs  process_abi.rs  program_loader.rs  resource_sched.rs  runtime_paths.rs  select_fdset.rs  signal_abi.rs  synthetic_fs.rs  system_info.rs  sysv_shm.rs  task_context.rs  task_registry.rs  time_abi.rs  user_memory.rs
kernel/arch/axhal/: Cargo.toml
kernel/config/axconfig/: Cargo.toml
kernel/config/axconfig/src/: lib.rs
kernel/diagnostics/axlog/: Cargo.toml
kernel/drivers/axdisplay/: Cargo.toml
kernel/drivers/axdma/: Cargo.toml
kernel/drivers/axdriver/: Cargo.toml
kernel/fs/axfs/: Cargo.toml
kernel/fs/axfs/src/: mounts.rs  root.rs
kernel/fs/axfs/src/fs/: ext4fs.rs
kernel/memory/axalloc/: Cargo.toml
kernel/memory/axmm/: Cargo.toml
kernel/memory/axmm/src/: aspace.rs
kernel/memory/axmm/src/backend/: alloc.rs  mod.rs
kernel/namespace/axns/: Cargo.toml
kernel/net/axnet/: Cargo.toml
kernel/net/axnet/src/smoltcp_impl/: listen_table.rs  loopback.rs  mod.rs  tcp.rs  udp.rs  udp_loopback.rs
kernel/runtime/axruntime/: Cargo.toml
kernel/smp/axipi/: Cargo.toml
kernel/sync/axsync/: Cargo.toml
kernel/task/axtask/: Cargo.toml
kernel/task/axtask/src/: run_queue.rs
modules/axalloc/: Cargo.toml
modules/axfs/: Cargo.toml
modules/axfs/src/: fops.rs  lib.rs  mounts.rs  root.rs
modules/axfs/src/api/: mod.rs
modules/axfs/src/fs/: mod.rs
modules/axhal/: Cargo.toml
modules/axhal/src/: lib.rs  mem.rs  paging.rs
modules/axlog/src/: lib.rs
modules/axmm/src/: aspace.rs
modules/axmm/src/backend/: alloc.rs  mod.rs
modules/axnet/: Cargo.toml
modules/axnet/src/smoltcp_impl/: listen_table.rs  mod.rs  tcp.rs  udp.rs
modules/axruntime/src/: lib.rs  mp.rs
modules/axtask/src/: task.rs  tests.rs  wait_queue.rs
scripts/make/: build.mk  cargo.mk  config.mk  deps.mk  loongarch64-kernel-wrap.lds  riscv64-kernel-wrap.lds
tools/deptool/src/: cmd_parser.rs  d2_generator.rs  mermaid_generator.rs
ulib/axlibc/src/: fs.rs  io.rs  io_mpx.rs  net.rs  pipe.rs  pthread.rs  resource.rs  time.rs
