[workspace]
resolver = "2"

members = [
    "kernel/arch/axhal",
    "kernel/config/axconfig",
    "kernel/diagnostics/axlog",
    "kernel/drivers/axdisplay",
    "kernel/drivers/axdma",
    "kernel/drivers/axdriver",
    "kernel/fs/axfs",
    "kernel/memory/axalloc",
    "kernel/memory/axmm",
    "kernel/namespace/axns",
    "kernel/net/axnet",
    "kernel/runtime/axruntime",
    "kernel/smp/axipi",
    "kernel/sync/axsync",
    "kernel/task/axtask",

    "api/axfeat",
    "api/arceos_api",
    "api/arceos_posix_api",

    "ulib/axstd",
    "ulib/axlibc",

    "examples/helloworld",
    "examples/helloworld-myplat",
    "examples/httpclient",
    "examples/httpserver",
    "examples/shell",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/arceos"
repository = "https://github.com/arceos-org/arceos"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
axstd = { path = "ulib/axstd" }
axlibc = { path = "ulib/axlibc" }

arceos_api = { path = "api/arceos_api" }
arceos_posix_api = { path = "api/arceos_posix_api" }
axfeat = { path = "api/axfeat" }

axalloc = { path = "kernel/memory/axalloc" }
axconfig = { path = "kernel/config/axconfig" }
axdisplay = { path = "kernel/drivers/axdisplay" }
axdriver = { path = "kernel/drivers/axdriver" }
axfs = { path = "kernel/fs/axfs" }
axhal = { path = "kernel/arch/axhal" }
axlog = { path = "kernel/diagnostics/axlog" }
axmm = { path = "kernel/memory/axmm" }
axnet = { path = "kernel/net/axnet" }
axns = { path = "kernel/namespace/axns" }
axruntime = { path = "kernel/runtime/axruntime" }
axsync = { path = "kernel/sync/axsync" }
axtask = { path = "kernel/task/axtask" }
axdma = { path = "kernel/drivers/axdma" }
axipi = { path = "kernel/smp/axipi" }

[profile.release]
lto = true

[patch.crates-io]
axcpu = { path = "vendor/axcpu" }
