[package]
name = "arceos_posix_api"
version.workspace = true
edition.workspace = true
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
    "wudashuai <wu-ds20@mails.tsinghua.edu.cn>",
    "yfblock <321353225@qq.com>",
    "scPointer <bhy18@mails.tsinghua.edu.cn>",
    "Shiping Yuan <robert_yuan@pku.edu.com>",
]
description = "POSIX-compatible APIs for ArceOS modules"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/api/arceos_posix_api"
documentation = "https://arceos-org.github.io/arceos/arceos_posix_api/index.html"

[features]
default = []

smp = ["axfeat/smp"]
irq = ["axfeat/irq"]
alloc = ["dep:axalloc", "axfeat/alloc"]
multitask = ["axtask/multitask", "axfeat/multitask", "axsync/multitask"]
fd = ["alloc", "dep:axns"]
fs = ["dep:axfs", "axfeat/fs", "fd"]
net = ["dep:axnet", "axfeat/net", "fd"]
pipe = ["fd"]
select = ["fd"]
epoll = ["fd"]
uspace = [
    "alloc",
    "irq",
    "multitask",
    "fd",
    "fs",
    "dep:axmm",
    "dep:crate_interface",
    "dep:lazyinit",
    "dep:linkme",
    "dep:linux-raw-sys",
    "dep:memory_addr",
    "dep:xmas-elf",
    "axhal/uspace",
    "axns/thread-local",
]

[dependencies]
# ArceOS modules
axfeat = { workspace = true }
axruntime = { workspace = true }
axconfig = { workspace = true }
axlog = { workspace = true }
axhal = { workspace = true }
axsync = { workspace = true }
axalloc = { workspace = true, optional = true }
axtask = { workspace = true, optional = true }
axfs = { workspace = true, optional = true }
axnet = { workspace = true, optional = true }
axns = { workspace = true, optional = true }
axmm = { workspace = true, optional = true }

# Other crates
axio = "0.2"
axerrno = "0.1"
flatten_objects = "0.2"
static_assertions = "1.1.0"
spin = { version = "0.10" }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
ctor_bare = "0.2"
crate_interface = { version = "0.3", optional = true }
lazyinit = { version = "0.2", optional = true }
linkme = { version = "0.3.35", optional = true }
linux-raw-sys = { version = "0.12.1", default-features = false, features = ["auxvec", "general", "ioctl", "no_std", "system"], optional = true }
memory_addr = { version = "0.4", optional = true }
xmas-elf = { version = "0.10", optional = true }

[build-dependencies]
bindgen ={ version = "0.72" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.16"

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = "0.2.4"
